# gil_asset_manager

./: CMakeLists.txt  CMakeOptions.txt  Makefile  asset_manager.cpp  asset_manager.h  asset_manager.h.in  asset_manager.tpp  file_protocol.cpp  file_protocol.h  web.h
example/: .gitignore  CMakeLists.txt  client.cpp  server.cpp
public/: local.html
